--- a/frontend/src/css/Mypage.css
+++ b/frontend/src/css/Mypage.css
@@ -37,7 +37,7 @@
   .fc-sat {
     color: #3399ff;
   }
-  p {
+  p#mypage_ {
     color: #df0174;
     font-family: Arial, Helvetica, sans-serif;
   }
