--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -6,17 +6,17 @@
 	color: #42b983;
 	margin: 0 auto;
 }
-.loginbox {
+#app_loginbox {
 	width: 150px;
 	vertical-align: middle;
 	clear:both;
 }
-.trueLogin {
+#app_trueLogin {
 	width: 50px;
 	vertical-align: middle;
 	float: right;
 }
-.link,
-.logo {
+#app_link,
+#app_logo {
 	cursor: pointer;
 }
