--- a/frontend/src/css/Home.css
+++ b/frontend/src/css/Home.css
@@ -7,12 +7,12 @@
     margin:0 auto;
 }
 
-#banner {
+#home_banner {
     margin-top: 10px;
 }
 
 /* 공지사항 */
-#notice {
+#home_notice {
 	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 	padding: 7px;
 	height: 268px;
@@ -22,48 +22,48 @@
 	text-overflow: ellipsis;
 }
 
-#first_line {
+#home_first_line {
 	margin-bottom: 30px;
 }
 
-#picture{
+#home_picture{
     margin-top: 10px;
 }
 #Socialbtn{
     margin-bottom : 10px;
     margin-top: 50px;
 }
-.footer {
+#home_footer {
     margin-top: 60px;
     margin-bottom: 50px;
 	color: black;
 }
 /* 로그인 전, 로그인 버튼 */
-.loginbutton {
+#home_loginbutton {
 	margin-top: 10px;
 	width: 250px;
 	height: 90px;
 	font-size: 15pt;
 }
 
-.trueLogin {
+#home_trueLogin {
 	width: 50px;
 	vertical-align: middle;
 	float: right;
 }
 
-.hottopic {
+#home_hottopic {
 	margin-top: 20px;
     margin-bottom: 20px;
 }
 
-.ad {
+#home_ad {
 	margin-top: 10px;
     padding-top: 10px;
 }
 
 /* 로그인 후, 마이페이지, 로그아웃 버튼 */
-#Mybtn{
+#home_Mybtn{
 	height: 38px;
 	width: 90px;
 	font-size: 10pt;
@@ -71,18 +71,18 @@
 	font-weight: bold;
 }
 
-.MyInfo{
+#home_MyInfo{
 	color: black;
 	margin-top: 10px;
 }
 
-.welcome{
+#home_welcome{
 	color:#708090;
 	font-size: 13pt;
 	font-family: 'Sunflower', sans-serif;
 	font-weight: bold;
 }
-.rate{
+#home_rate{
 	color: #C71585;
 	font-size: 11pt;
 	font-family:'Jua', sans-serif;
