--- a/frontend/src/css/login.css
+++ b/frontend/src/css/login.css
@@ -11,8 +11,7 @@
   color: black;
 }
 
-input#password,
-input#id {
+input.login_ {
   margin: 0px 0;
   width: 22%;
   padding: 15px;
@@ -23,7 +22,7 @@ input#id {
   cursor: pointer;
   background-color: white;
   border: 0px;
-  height: 0px;
+  height: 100%;
   margin-bottom: 20px;
 }
 
