--- a/frontend/src/css/CommentListItem.css
+++ b/frontend/src/css/CommentListItem.css
@@ -1,12 +1,27 @@
 /* 대댓글 작성 */
-#btncreate{
+#commentlistitem_btncreate{
     height: 25px;
     width: 25px;
+    padding: 0px;
 }
 
 /* 대댓글 삭제 */
-#btndel{
+#commentlistitem_btndel{
     height: 25px;
-    widows: 25px;
-    padding: 5px;
+    width: 25px;
+    padding: 0px;
+}
+
+span.commentlistitem_ {
+    -webkit-text-fill-color: white;
+    margin: 0px;
+    padding: 0px;
+}
+
+span.commentlistitem_smile {
+	-webkit-text-fill-color: green;
+}
+
+span.commentlistitem_angry {
+	-webkit-text-fill-color: red;
 }
