Comment Hit buttons act more naturally

--- a/frontend/src/css/CommentListItem.css
+++ b/frontend/src/css/CommentListItem.css
@@ -12,6 +12,10 @@
     padding: 0px;
 }
 
+#commentlistitem_hit {
+    cursor: pointer;
+}
+
 span.commentlistitem_ {
     -webkit-text-fill-color: white;
     margin: 0px;
